# nyc-restaurant-delivery-analytics

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  eda.py  models.py  stats.py
tests/: test_analysis.py
