[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nyc-restaurant-delivery-analytics"
version = "1.0.0"
description = "Statistical analysis and predictive modelling on 1,900+ NYC food delivery orders"
authors = [{name = "Jash Shah", email = "jshah67@stevens.edu"}]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["data-analysis", "statistics", "regression", "eda", "food-delivery", "nyc"]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "statsmodels>=0.14",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
